--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,7 +1,7 @@
 Package: PRIMsrc
 Type: Package
 Title: PRIM Survival Regression Classification
-Version: 0.6.3
+Version: 0.7.0
 Date: 2015-11-12
 Authors@R: c(person("Jean-Eudes", "Dazard",
                     role = c("aut", "cre"),
@@ -18,7 +18,7 @@ Authors@R: c(person("Jean-Eudes", "Dazard",
 Author: Jean-Eudes Dazard [aut, cre], Michael Choe [ctb], Michael LeBlanc [ctb], Alberto Santana [ctb]
 Maintainer: Jean-Eudes Dazard <jxd101@case.edu>
 Description: Performs a unified treatment of Bump Hunting by Patient Rule Induction Method (PRIM) in Survival, Regression and Classification settings (SRC). The current version is a development release that only implements the case of a survival response. New features will be added soon as they are available.
-Depends: R (>= 3.0.2), parallel, survival, Hmisc, glmnet, MASS
+Depends: R (>= 3.0.2), parallel, survival, Hmisc, MASS
 Imports: graphics, grDevices, stats
 URL: https://github.com/jedazard/PRIMsrc
 Repository: PRIMsrc, GitHub, Inc.
